--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=postgres
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/market
 spring.datasource.username=sting
 spring.datasource.password=ghser
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.thymeleaf.cache=false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+server.port=8082
