привёл json к hateoas-виду, убрал звено CategoryResource. Теперь категория сама себе hateoas-ресурс

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.datasource.password=ghser
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 server.port=8082
+spring.groovy.template.check-template-location=false
