--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,12 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-social-facebook")
     compile("org.springframework.boot:spring-boot-starter-social-twitter")
     compile("org.springframework.boot:spring-boot-starter-web")
+
+    compile("org.springframework.boot:spring-boot-starter-redis")
     compile("com.zaxxer:HikariCP")
+
+    compile 'org.springframework.session:spring-session:1.0.2.RELEASE'
+
     runtime("org.postgresql:postgresql:9.4-1201-jdbc41")
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
